fix: Move Jump link to main out of view

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -308,6 +308,21 @@ dt {
   aspect-ratio: 1;
 }
 
+.skip {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.skip:focus {
+  position: static;
+  width: auto;
+  height: auto;
+}
+
 .flex-row {
   display: flex;
   align-items: center;
